# quran-explorer

./: Cargo.toml  Dioxus.toml  flake.nix
src/: main.rs  quran.rs
