[package]
name = "quran-explorer"
version = "0.1.0"
authors = ["hkalbasi <hamidrezakalbasi@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
once_cell = "1.19.0"
quick-xml = "0.31.0"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
